--- a/templates/data.html
+++ b/templates/data.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>RanTech</title>
+	<title>Search</title>
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
@@ -31,7 +31,7 @@
 					<span class="icon">
 						<i class="fa fa-twitter"></i>
 					</span>
-				</a>				
+				</a>
 			</div>
 
 			<div class="nav-right nav-menu">
@@ -48,28 +48,28 @@
 				<span></span>
 			</span>
 		</nav>
-				
+
 		<!-- About Me -->
 		<section id="about" class="section section-1">
 			<div class="container has-text-centered">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="../static/img/profile1.jpg">
+				<img class="avatar" src="../static/img/aviation2.jpg">
 			</div>
 			<div class="container"></br>
-                <h3 align="center" id="title3">Xiao Ran</h3>
+                <h3 align="center" id="title3"> Info Search Page</h3>
 				<p class="intro" align="center" id="intro1">
-					后面暂时先空着
+					资料检索页面
 				</p>
 			</div>
 		</section>
-		
+
 		<!-- Projects -->
 		<section  id="projects" class="section section-2">
 			<div class="container">
 				<div class="has-text-centered">
 					<h3 class="title is-3">To Search / 查询</h3>
 				</div>
-				
+
 				<div class="columns is-multiline is-desktop">
 					<!-- Project 1 -->
 					<div class="column">
@@ -80,7 +80,7 @@
                                         <a target="_blank" href="/search/"><img class="" src="../static/img/aviation.jpg" alt="Image"></a>
 									</figure>
 								</div>
-								<div>			
+								<div>
 									<p align="center">
 										Go to search aviation information and emu/num info. <br>
                                         检索航空器注册/动车组交路及配属资料
@@ -99,7 +99,7 @@
                                         <a target="_blank" href="/rocket/"><img class="" src="../static/img/rocket.jpg" alt="Image"></a>
 									</figure>
 								</div>
-								<div>			
+								<div>
 									<p align="center">
 										Rocket Launch Forecast <br>
                                         火箭发射预告
@@ -116,7 +116,7 @@
 		<!-- Social -->
 		<section id="social" class="section section-3">
 			<div class="container">
-				<div class="has-text-centered">					
+				<div class="has-text-centered">
 					<h3 class="title is-3">WT Reverse Data </h3>
 				</div>
 				<div class="social-container columns">
@@ -134,14 +134,14 @@
 					</div>
 				</div>
 			</div>
-		</section>	
-		
+		</section>
+
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
 			<a href="http://www.hassanali.me/about">Template From Hassan Ali</a>
 		</section>
-		
+
 		<!-- Scripts  -->
 		<script src="../static/js/controller.js"></script>
-	</body>	
+	</body>
 </html>
