--- a/templates/rocket2.html
+++ b/templates/rocket2.html
@@ -69,7 +69,7 @@
 				<div class="has-text-centered">
 					<h3 class="title is-3">Data Time / 数据时间</h3>
 				</div>
-                <h4 class="is-4">{{ Time }}</h4>
+                <h4 class="title is-4">{{ Time }}</h4>
 			</div>
 		</section>
 
