--- a/templates/data.html
+++ b/templates/data.html
@@ -36,7 +36,7 @@
 
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="#about">About</a>
-				<a class="nav-item" href="#projects">To Search</a>
+				<a class="nav-item" href="#projects">Search</a>
 				<a class="nav-item" href="#social">WT Reverse Data</a>
 			</div>
 
