--- a/templates/rocket2.html
+++ b/templates/rocket2.html
@@ -36,7 +36,7 @@
 
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="/">About</a>
-				<a class="nav-item" href="/search/">To Search</a>
+				<a class="nav-item" href="/search/">Search</a>
 				<a class="nav-item" href="/">WT Reverse Data</a>
 			</div>
 
