--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="#about">About</a>
-				<a class="nav-item" href="#projects">To Search</a>
+				<a class="nav-item" href="#projects">Search</a>
 				<a class="nav-item" href="#social">WT Reverse Data</a>
 			</div>
 
@@ -67,7 +67,7 @@
 		<section  id="projects" class="section section-2">
 			<div class="container">
 				<div class="has-text-centered">
-					<h3 class="title is-3">To Search / 查询</h3>
+					<h3 class="title is-3">Search / 查询</h3>
 				</div>
 				
 				<div class="columns is-multiline is-desktop">
@@ -117,7 +117,7 @@
 		<section id="social" class="section section-3">
 			<div class="container">
 				<div class="has-text-centered">					
-					<h3 class="title is-3">WT Reverse Data </h3>
+					<h3 class="title is-3">WT Reverse Data / WT逆向数据</h3>
 				</div>
 				<div class="social-container columns">
 					<div class="column is-6 has-text-centered">
