--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-                                        <a target="_blank" href="/rocket/"><img class="" src="../static/img/rocket.jpg" alt="Image"></a>
+                                        <a target="_blank" href="https://spaceflightnow.com/launch-schedule/"><img class="" src="../static/img/rocket.jpg" alt="Image"></a>
 									</figure>
 								</div>
 								<div>			
